--- a/pub.bib
+++ b/pub.bib
@@ -652,6 +652,15 @@ series = {MHV '22}
   note={to appear}
 }
 
+
+@article{melnyk2023-6gnext,
+  title={6G NeXt - Towards 6G Split Computing Network Applications: Use Cases and Architecture},
+  author={Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Hans Schotten, Mandy Galkow-Schneider, Ingo Friese, Tobias Pfandzelter, David Bermbach, Louay Bassbouss and Alexander Zoubarev, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, abian Quaeck, Nick Stuckert, Robert Vilter},
+  booktitle="27. VDE-ITG-Fachtagung Mobilkommunikation - VDE-ITG-Fachtagung Mobilkommunikation",
+  year = {2023},
+  note={to appear}
+}
+
 @article{singla2023point,
   title={Subjective Quality Evaluation of Point Clouds using Remote Testing},
   author={Ashutosh Singla, Shuang Wang, Steve Göring, Rakesh Rao Ramachandra Rao, Irene Viola, Pablo Cesar, Alexander Raake},
