updates of bibs

--- a/bibs/friese20236g.bib
+++ b/bibs/friese20236g.bib
@@ -3,7 +3,7 @@
   author={Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter},
   booktitle="2nd International Conference on 6G Networking (6GNet) ",
   year = {2023},
-  note={to appear}
+  url={https://ieeexplore.ieee.org/abstract/document/10317647}
 }
 
 
