--- a/bibs/melnyk2023-6gnext.bib
+++ b/bibs/melnyk2023-6gnext.bib
@@ -3,6 +3,6 @@
   author={Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Hans Schotten, Mandy Galkow-Schneider, Ingo Friese, Tobias Pfandzelter, David Bermbach, Louay Bassbouss and Alexander Zoubarev, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, abian Quaeck, Nick Stuckert, Robert Vilter},
   booktitle="27. VDE-ITG-Fachtagung Mobilkommunikation - VDE-ITG-Fachtagung Mobilkommunikation",
   year = {2023},
-  note={to appear}
+  url={https://ieeexplore.ieee.org/abstract/document/10278518}
 }
 
