--- a/bibs/singla2023point.bib
+++ b/bibs/singla2023point.bib
@@ -3,5 +3,6 @@
   author={Ashutosh Singla, Shuang Wang, Steve Göring, Rakesh Rao Ramachandra Rao, Irene Viola, Pablo Cesar, Alexander Raake},
   booktitle="2nd International Workshop on Interactive Extended Reality (IXR) ",
   year = {2023},
-  note={to appear}
+  url={https://doi.org/10.1145/3607546.3616803}
 }
+
