--- a/pub.bib
+++ b/pub.bib
@@ -649,7 +649,7 @@ series = {MHV '22}
   author={Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter},
   booktitle="2nd International Conference on 6G Networking (6GNet) ",
   year = {2023},
-  note={to appear}
+  url={https://ieeexplore.ieee.org/abstract/document/10317647}
 }
 
 
@@ -658,7 +658,7 @@ series = {MHV '22}
   author={Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Hans Schotten, Mandy Galkow-Schneider, Ingo Friese, Tobias Pfandzelter, David Bermbach, Louay Bassbouss and Alexander Zoubarev, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, abian Quaeck, Nick Stuckert, Robert Vilter},
   booktitle="27. VDE-ITG-Fachtagung Mobilkommunikation - VDE-ITG-Fachtagung Mobilkommunikation",
   year = {2023},
-  note={to appear}
+  url={https://ieeexplore.ieee.org/abstract/document/10278518}
 }
 
 @article{singla2023point,
@@ -666,5 +666,21 @@ series = {MHV '22}
   author={Ashutosh Singla, Shuang Wang, Steve Göring, Rakesh Rao Ramachandra Rao, Irene Viola, Pablo Cesar, Alexander Raake},
   booktitle="2nd International Workshop on Interactive Extended Reality (IXR) ",
   year = {2023},
-  note={to appear}
+  url={https://doi.org/10.1145/3607546.3616803}
+}
+
+@article{goeringrao2024videocomplexity,
+  title={AVT-VIBE -- OVERVIEW OF TWO MODELS FOR THE ICIP 2024 GRAND CHALLENGE ON VIDEO COMPLEXITY},
+  author={Steve G\"oring and Rakesh Rao Ramachandra Rao},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/avt_vibe},
+  note={to appear},
+  year = {2024},
+}
+
+@article{goering2024frankenstone,
+  title={The Frankenstone toolbox for video quality analysis of user-generated content.},
+  author={Steve G\"oring, Alexander Raake},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/frankenstone},
+  note={to appear},
+  year = {2024},
 }
