--- a/bibs/goeringrao2024videocomplexity.bib
+++ b/bibs/goeringrao2024videocomplexity.bib
@@ -1,5 +1,5 @@
 @article{goeringrao2024videocomplexity,
-  title={AVT-VIBE -- OVERVIEW OF TWO MODELS FOR THE ICIP 2024 GRAND CHALLENGE ON VIDEO COMPLEXITY},
+  title={AVT-VIBE -- Overview of two Models for the ICIP 2024 Grand Challenge on Video Complexity},
   author={Steve G\"oring and Rakesh Rao Ramachandra Rao},
   code={https://github.com/Telecommunication-Telemedia-Assessment/avt_vibe},
   note={to appear},
