--- a/pub.bib
+++ b/pub.bib
@@ -669,6 +669,16 @@ series = {MHV '22}
   url={https://doi.org/10.1145/3607546.3616803}
 }
 
+@inproceedings{rao2023adaptation,
+  title={Adaptation of Bitstream-based Video Quality Models for Image Quality Assessment},
+  author={Rakesh Rao Ramachandra Rao, Steve G{\"o}ring, Alexander Raake},
+  booktitle={2023 IEEE International Symposium on Multimedia (ISM)},
+  pages={230--231},
+  year={2023},
+  organization={IEEE},
+  url={https://doi.org/10.1109/ISM59092.2023.00043}
+}
+
 @article{goeringrao2024videocomplexity,
   title={AVT-VIBE -- Overview of two Models for the ICIP 2024 Grand Challenge on Video Complexity},
   author={Steve G\"oring and Rakesh Rao Ramachandra Rao},
