--- a/pub.bib
+++ b/pub.bib
@@ -669,6 +669,15 @@ series = {MHV '22}
   url={https://doi.org/10.1145/3607546.3616803}
 }
 
+@inproceedings{fremerey2023avt3608k,
+  author = {Stephan Fremerey, Raja Faseeh Uz Zaman, Touseef Ashraf, Rakesh Rao Ramac,ra Rao, Steve G\"oring, Alexander Raake},
+  title = {Towards evaluation of immersion, visual comfort and exploration behaviour for non-stereoscopic and stereoscopic 360° videos},
+  booktitle={2023 IEEE International Symposium on Multimedia (ISM)},
+  pages={131--138},
+  year={2023},
+  organization={IEEE}
+}
+
 @inproceedings{rao2023adaptation,
   title={Adaptation of Bitstream-based Video Quality Models for Image Quality Assessment},
   author={Rakesh Rao Ramachandra Rao, Steve G{\"o}ring, Alexander Raake},
