--- a/bibs/goering2024frankenstone.bib
+++ b/bibs/goering2024frankenstone.bib
@@ -1,8 +1,8 @@
-@article{goering2024frankenstone,
+@inproceedings{goering2024frankenstone,
   title={The Frankenstone toolbox for video quality analysis of user-generated content.},
   author={Steve G\"oring, Alexander Raake},
   code={https://github.com/Telecommunication-Telemedia-Assessment/frankenstone},
-  note={to appear},
+  booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
   year = {2024},
 }
 
