--- a/bibs/immohr2023proof.bib
+++ b/bibs/immohr2023proof.bib
@@ -3,5 +3,6 @@
     title = {Proof-of-Concept Study to Evaluate the Impact of Spatial Audio on Social Presence and User Behavior in Multi-Modal VR Communication},
     booktitle="ACM International Conference on Interactive Media Experiences (IMX)",
     year = {2023},
+    code = {https://github.com/Telecommunication-Telemedia-Assessment/vr_communication_study_1}
 }
 
