--- a/pub.bib
+++ b/pub.bib
@@ -584,6 +584,7 @@ series = {MHV '22}
     title = {Proof-of-Concept Study to Evaluate the Impact of Spatial Audio on Social Presence and User Behavior in Multi-Modal VR Communication},
     booktitle="ACM International Conference on Interactive Media Experiences (IMX)",
     year = {2023},
+    code = {https://github.com/Telecommunication-Telemedia-Assessment/vr_communication_study_1}
 }
 
 @inproceedings{goering2023aiquality,
@@ -703,6 +704,15 @@ series = {MHV '22}
   booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
   year = {2024},
 }
+
+
+@inproceedings{immohr2024triadic,
+  title={Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality.},
+  author={Felix Immohr, Gareth Rendle, Christian Kehling, Anton Lammert, Steve G\"oring, Bernd Froehlich, Alexander Raake},
+  booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
+  year = {2024},
+}
+
 
 @article{conde2024ais,
   title={AIS 2024 challenge on video quality assessment of user-generated content: Methods and results},
