add poster qomex 2024

--- a/pub.bib
+++ b/pub.bib
@@ -701,6 +701,7 @@ series = {MHV '22}
   title={The Frankenstone toolbox for video quality analysis of user-generated content.},
   author={Steve G\"oring, Alexander Raake},
   code={https://github.com/Telecommunication-Telemedia-Assessment/frankenstone},
+  poster = {./pdfs/2024/qomex2024_frankenstone_poster.pdf},
   booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
   year = {2024},
 }
