add avt-vibe paper

--- a/pub.bib
+++ b/pub.bib
@@ -693,7 +693,7 @@ series = {MHV '22}
   title={AVT-VIBE -- Overview of two Models for the ICIP 2024 Grand Challenge on Video Complexity},
   author={Steve G\"oring and Rakesh Rao Ramachandra Rao},
   code={https://github.com/Telecommunication-Telemedia-Assessment/avt_vibe},
-  note={to appear},
+  pdf= {./pdfs/2024/avt-vibe-paper.pdf},
   year = {2024},
 }
 
