--- a/bibs/goering2024frankenstone.bib
+++ b/bibs/goering2024frankenstone.bib
@@ -1,5 +1,5 @@
 @inproceedings{goering2024frankenstone,
-  title={The Frankenstone toolbox for video quality analysis of user-generated content.},
+  title={The Frankenstone toolbox for video quality analysis of user-generated content},
   author={Steve G\"oring, Alexander Raake},
   code={https://github.com/Telecommunication-Telemedia-Assessment/frankenstone},
   poster = {./pdfs/2024/qomex2024_frankenstone_poster.pdf},
