--- a/pub.bib
+++ b/pub.bib
@@ -698,7 +698,7 @@ series = {MHV '22}
 }
 
 @inproceedings{goering2024frankenstone,
-  title={The Frankenstone toolbox for video quality analysis of user-generated content.},
+  title={The Frankenstone toolbox for video quality analysis of user-generated content},
   author={Steve G\"oring, Alexander Raake},
   code={https://github.com/Telecommunication-Telemedia-Assessment/frankenstone},
   poster = {./pdfs/2024/qomex2024_frankenstone_poster.pdf},
@@ -708,7 +708,7 @@ series = {MHV '22}
 
 
 @inproceedings{immohr2024triadic,
-  title={Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality.},
+  title={Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality},
   author={Felix Immohr, Gareth Rendle, Christian Kehling, Anton Lammert, Steve G\"oring, Bernd Froehlich, Alexander Raake},
   booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
   year = {2024},
