--- a/bibs/immohr2024triadic.bib
+++ b/bibs/immohr2024triadic.bib
@@ -1,5 +1,5 @@
 @inproceedings{immohr2024triadic,
-  title={Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality.},
+  title={Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality},
   author={Felix Immohr, Gareth Rendle, Christian Kehling, Anton Lammert, Steve G\"oring, Bernd Froehlich, Alexander Raake},
   booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
   year = {2024},
