update and fix bibtex parsing errors

--- a/pub.bib
+++ b/pub.bib
@@ -723,5 +723,25 @@ series = {MHV '22}
   year={2024}
 }
 
+@inproceedings{goering2024aiupscaling,
+    author = {Steve G\"oring and Rasmus Merten and Alexander Raake},
+    title = {Appeal prediction for AI up-scaled Images},
+    booktitle={26th IEEE International Symposium on Multimedia (2024 IEEE ISM)},
+    year = {2024},
+    pages={1-8},
+    volume={},
+    month={Dec},
+    code={https://github.com/Telecommunication-Telemedia-Assessment/ai_upscaling},
+    note={to appear}
+}
 
-
+@inproceedings{keller2024hfr,
+    author = {Dominik Keller and Paul Rudi Frank and Steve G\"oring and Alexander Raake},
+    title = {Investigating the Impact of High Frame Rate on Video Quality: A SAMVIQ Approach},
+    booktitle={26th IEEE International Symposium on Multimedia (2024 IEEE ISM)},
+    year = {2024},
+    pages={1-8},
+    volume={},
+    month={Dec},
+    note={to appear}
+}
