update ism paper

--- a/pub.bib
+++ b/pub.bib
@@ -732,6 +732,8 @@ series = {MHV '22}
     volume={},
     month={Dec},
     code={https://github.com/Telecommunication-Telemedia-Assessment/ai_upscaling},
+    slides={pdfs/2024/2024_ism_ai_enhancement.pdf},
+    doi={10.1109/ISM63611.2024.00014},
     note={to appear}
 }
 
