--- a/bibs/goering2024aiupscaling.bib
+++ b/bibs/goering2024aiupscaling.bib
@@ -7,6 +7,7 @@
     volume={},
     month={Dec},
     code={https://github.com/Telecommunication-Telemedia-Assessment/ai_upscaling},
+    doi={10.1109/ISM63611.2024.00014},
     note={to appear}
 }
 
