--- a/pub.bib
+++ b/pub.bib
@@ -734,7 +734,7 @@ series = {MHV '22}
     code={https://github.com/Telecommunication-Telemedia-Assessment/ai_upscaling},
     slides={pdfs/2024/2024_ism_ai_enhancement.pdf},
     doi={10.1109/ISM63611.2024.00014},
-    note={to appear}
+    url={https://arxiv.org/abs/2502.14013}
 }
 
 @inproceedings{keller2024hfr,
