--- a/pub.bib
+++ b/pub.bib
@@ -747,3 +747,10 @@ series = {MHV '22}
     month={Dec},
     note={to appear}
 }
+
+@article{fktg2025ai,
+    title = {Wie gut sind KI-basierte Algorithmen für das Hochskalieren von Bildern? -- Analyse und Modelle zur Vorhersage},
+    author = {Steve G\"oring and Rasmus Merten and Alexander Raake},
+    year = 2025,
+    publisher= {FKTG Journal}
+}
