--- a/bibs/fktg2025ai.bib
+++ b/bibs/fktg2025ai.bib
@@ -1,6 +1,7 @@
-@article{fktg2025ai,
+@inproceedings{fktg2025ai,
     title = {Wie gut sind KI-basierte Algorithmen für das Hochskalieren von Bildern? -- Analyse und Modelle zur Vorhersage},
     author = {Steve G\"oring and Rasmus Merten and Alexander Raake},
     year = 2025,
-    publisher= {FKTG Journal}
+    month = 02,
+    booktitle= {FKTG Journal}
 }
