--- a/bibs/goering2024frankenstone.bib
+++ b/bibs/goering2024frankenstone.bib
@@ -4,6 +4,7 @@
   code={https://github.com/Telecommunication-Telemedia-Assessment/frankenstone},
   poster = {./pdfs/2024/qomex2024_frankenstone_poster.pdf},
   booktitle="16th International Conference on Quality of Multimedia Experience (QoMEX)",
+  url={https://doi.org/10.1109/QoMEX61742.2024.10598249},
   year = {2024},
 }
 
