--- a/pub.bib
+++ b/pub.bib
@@ -756,3 +756,9 @@ series = {MHV '22}
     month = 02,
     booktitle= {FKTG Journal}
 }
+
+@article{goering2025clipse,
+  title={CLIPSE -- a minimalistic CLIP-based image search engine for research},
+  author={Steve Göring},
+  journal={arXiv e-prints},
+}
