--- a/pub.bib
+++ b/pub.bib
@@ -757,8 +757,12 @@ series = {MHV '22}
     booktitle= {FKTG Journal}
 }
 
-@article{goering2025clipse,
-  title={CLIPSE -- a minimalistic CLIP-based image search engine for research},
-  author={Steve Göring},
-  journal={arXiv e-prints},
+@misc{göring2025clipseminimalisticclipbased,
+      title={CLIPSE -- a minimalistic CLIP-based image search engine for research},
+      author={Steve Göring},
+      year={2025},
+      eprint={2504.17643},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2504.17643},
 }
