--- a/pub.bib
+++ b/pub.bib
@@ -766,3 +766,9 @@ series = {MHV '22}
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2504.17643},
 }
+
+@article{treybig2025,
+  title="Challenges of conducting a large-scale online perceptual study in the field of spatial audio",
+  author={Lukas Treybig and Florian Klein and Steve Göring and Stephan Werner},
+  booktitle={Tagungsband-DAGA 2025: 51. Jahrestagung f{\"u}r Akustik}
+}
