--- a/bibs/goering2025clipseminimalisticclipbased.bib
+++ b/bibs/goering2025clipseminimalisticclipbased.bib
@@ -1,4 +1,4 @@
-@misc{göring2025clipseminimalisticclipbased,
+@misc{goering2025clipseminimalisticclipbased,
       title={CLIPSE -- a minimalistic CLIP-based image search engine for research},
       author={Steve Göring},
       year={2025},
@@ -7,4 +7,5 @@
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2504.17643},
 }
+
 
