--- a/pub.bib
+++ b/pub.bib
@@ -757,7 +757,7 @@ series = {MHV '22}
     booktitle= {FKTG Journal}
 }
 
-@misc{göring2025clipseminimalisticclipbased,
+@misc{goering2025clipseminimalisticclipbased,
       title={CLIPSE -- a minimalistic CLIP-based image search engine for research},
       author={Steve Göring},
       year={2025},
@@ -767,7 +767,8 @@ series = {MHV '22}
       url={https://arxiv.org/abs/2504.17643},
 }
 
-@article{treybig2025,
+
+@inproceedings{treybig2025,
   title="Challenges of conducting a large-scale online perceptual study in the field of spatial audio",
   author={Lukas Treybig and Florian Klein and Steve Göring and Stephan Werner},
   booktitle={Tagungsband-DAGA 2025: 51. Jahrestagung f{\"u}r Akustik}
