--- a/bibs/treybig2025.bib
+++ b/bibs/treybig2025.bib
@@ -1,5 +1,6 @@
 @inproceedings{treybig2025,
   title="Challenges of conducting a large-scale online perceptual study in the field of spatial audio",
   author={Lukas Treybig and Florian Klein and Steve Göring and Stephan Werner},
-  booktitle={Tagungsband-DAGA 2025: 51. Jahrestagung f{\"u}r Akustik}
+  booktitle={Tagungsband-DAGA 2025: 51. Jahrestagung f{\"u}r Akustik},
+  year=2025
 }
