--- a/pub.bib
+++ b/pub.bib
@@ -774,3 +774,10 @@ series = {MHV '22}
   booktitle={Tagungsband-DAGA 2025: 51. Jahrestagung f{\"u}r Akustik},
   year=2025
 }
+
+@inproceedings{rao2025rating,
+  title={A Large-Scale Evaluation of Subject Rating Behaviour in Visual Quality Assessment Studies},
+  author={Rakesh Rao and Steve G\"oring and Alexander Raake},
+  booktitle="17h International Conference on Quality of Multimedia Experience (QoMEX)",
+  year = {2025},
+}
