--- a/pub.bib
+++ b/pub.bib
@@ -781,3 +781,21 @@ series = {MHV '22}
   booktitle="17h International Conference on Quality of Multimedia Experience (QoMEX)",
   year = {2025},
 }
+
+@inproceedings{menz2025volvideo,
+  title={Impact of Texture Resolution, Polygon Count, Quality Level, and Viewing Distance on Volumetric Avatar Visual Quality},
+  author={William Menz and Jakob Hartbrich and Abhinav Battacharya and {Rakesh Rao Ramachandra} Rao and Steve Göring and Alexander Raake},
+  booktitle="Metacom 2025",
+  year = {2025},
+  note ={to appear},
+  author+an = {5=highlight}
+}
+
+@inproceedings{menz2025ambi,
+  title={Influence of 4th-Order Ambisonics Audio on the Perceived Quality and Exploration Behavior of 360\textdegree~Videos},
+  author={William Menz and Jakob Hartbrich and Abhinav Battacharya and {Rakesh Rao Ramachandra} Rao and Thomas Robotham and Felix Immohr and Steve Göring and {Emanu\"{e}l A. P.} Habets and Alexander Raake},
+  booktitle="Metacom 2025",
+  year = {2025},
+  note ={to appear},
+  author+an = {7=highlight}
+}
