--- a/pub.bib
+++ b/pub.bib
@@ -799,3 +799,23 @@ series = {MHV '22}
   note ={to appear},
   author+an = {7=highlight}
 }
+
+@inproceedings{hartbrich2025hand,
+  title = {The Effect of Hand Visibility in AR: Comparing Dexterity and Interaction with Virtual and Real Objects},
+  author={Jakob Hartbrich and Stephanie {Arevalo Arboleda} and Steve Göring and Alexander Raake},
+  booktitle="ISMAR25",
+  year = {2025},
+  note ={to appear},
+  author+an = {3=highlight}
+}
+
+
+
+@article{treybig2025audio,
+  title = {Predicting the Perceptibility of Room Acoustic Variations Using Generalized Linear Mixed Models},
+  author={Lukas Treybig and Florian Klein and Stephan Werner and Sebastia V. Amengual Gari and Steve Göring},
+  journal={Journal of the Audio Engineering Society},
+  year={2025},
+  publisher={Audio Engineering Society},
+  author+an = {5=highlight}
+}
