--- a/pub.bib
+++ b/pub.bib
@@ -793,7 +793,7 @@ series = {MHV '22}
 
 @inproceedings{menz2025ambi,
   title={Influence of 4th-Order Ambisonics Audio on the Perceived Quality and Exploration Behavior of 360\textdegree~Videos},
-  author={William Menz and Jakob Hartbrich and Abhinav Battacharya and {Rakesh Rao Ramachandra} Rao and Thomas Robotham and Felix Immohr and Steve Göring and {Emanu\"{e}l A. P.} Habets and Alexander Raake},
+  author={William Menz and Abhinav Bhattacharya and Thomas Robotham and Felix Immohr and {Rakesh Rao Ramachandra} Rao and Steve Göring and Emanuel Habets and Alexander Raake},
   booktitle="Metacom 2025",
   year = {2025},
   note ={to appear},
