--- a/pub.bib
+++ b/pub.bib
@@ -819,3 +819,11 @@ series = {MHV '22}
   publisher={Audio Engineering Society},
   author+an = {5=highlight}
 }
+
+@inproceedings{herb2025-neural,
+  title={Evaluating Video Quality Metrics for Neural and Traditional Codecs using 4K/UHD-1 Videos},
+  author={Benjamin Herb and Rakesh Rao and Steve G\"oring and Alexander Raake},
+  booktitle="Picture Coding Symposium (PCS)",
+  year = {2025},
+  author+an = {3=highlight}
+}
