add missing bib

--- a/pub.bib
+++ b/pub.bib
@@ -820,7 +820,7 @@ series = {MHV '22}
   author+an = {5=highlight}
 }
 
-@inproceedings{herb2025-neural,
+@inproceedings{herb2025neural,
   title={Evaluating Video Quality Metrics for Neural and Traditional Codecs using 4K/UHD-1 Videos},
   author={Benjamin Herb and Rakesh Rao and Steve G\"oring and Alexander Raake},
   booktitle="Picture Coding Symposium (PCS)",
