--- a/pub.bib
+++ b/pub.bib
@@ -827,3 +827,11 @@ series = {MHV '22}
   year = {2025},
   author+an = {3=highlight}
 }
+
+@inproceedings{goering2025llm,
+  title={Exploiting LLMs for meta-data-based video quality prediction},
+  author={Steve G\"oring and Rakesh Rao and Alexander Raake},
+  booktitle="27th IEEE International Symposium on Multimedia (IEEE ISM)",
+  year = {2025},
+  author+an = {1=highlight}
+}
