--- a/pub.bib
+++ b/pub.bib
@@ -833,5 +833,6 @@ series = {MHV '22}
   author={Steve G\"oring and Rakesh Rao and Alexander Raake},
   booktitle="27th IEEE International Symposium on Multimedia (IEEE ISM)",
   year = {2025},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/llm_vqm},
   author+an = {1=highlight}
 }
