--- a/bibs/herb2025neural.bib
+++ b/bibs/herb2025neural.bib
@@ -3,6 +3,7 @@
   author={Benjamin Herb and Rakesh Rao and Steve G\"oring and Alexander Raake},
   booktitle="Picture Coding Symposium (PCS)",
   year = {2025},
+  url = {https://arxiv.org/abs/2511.00969},
   author+an = {3=highlight}
 }
 
