add missing refs

--- a/pub.bib
+++ b/pub.bib
@@ -837,3 +837,23 @@ series = {MHV '22}
   code={https://github.com/Telecommunication-Telemedia-Assessment/llm_vqm},
   author+an = {1=highlight}
 }
+
+@inproceedings{menz2025head,
+  title={Evaluation of a Floating-Head Communication Prototype for Video-Conferencing},
+  author={William Menz and Alexander Zoubarev and David Kutschke and Rakesh Rao and Louay Bassbouss and Sven {Bliedung von der Heide} and Steve G\"oring and Alexander Raake},
+  booktitle="27th IEEE International Symposium on Multimedia (IEEE ISM)",
+  year = {2025},
+  author+an = {7=highlight}
+}
+
+@inproceedings{menz2025mammal,
+  title={Smarter Traps: Neural Network-Driven Classification of Small Mammals},
+  author={William Menz and Ralf Dittrich and Rakesh Rao and Steve G\"oring and Alexander Raake},
+  booktitle="27th IEEE International Symposium on Multimedia (IEEE ISM)",
+  year = {2025},
+  author+an = {4=highlight}
+}
+
+
+
+
