add slides for my ism 2025 talk

--- a/pub.bib
+++ b/pub.bib
@@ -835,6 +835,7 @@ series = {MHV '22}
   booktitle="27th IEEE International Symposium on Multimedia (IEEE ISM)",
   year = {2025},
   code={https://github.com/Telecommunication-Telemedia-Assessment/llm_vqm},
+  slides={./pdfs/2025/ism_2025.pdf},
   author+an = {1=highlight}
 }
 
