--- a/pub.bib
+++ b/pub.bib
@@ -809,7 +809,14 @@ series = {MHV '22}
   author+an = {3=highlight}
 }
 
-
+@article{fremerey2025vrcrowd,
+  title={Analysing how well 360$^\circ$ Video Exploration Behaviour can be Measured with Screen versus HMD Viewing and in the Crowd},
+  author={Stephan Fremerey and Steve G\"oring and Rakesh Rao and Alexander Raake},
+  journal={IEEE Access},
+  year={2025},
+  publisher={IEEE},
+  author+an = {2=highlight},
+}
 
 @article{treybig2025audio,
   title = {Predicting the Perceptibility of Room Acoustic Variations Using Generalized Linear Mixed Models},
